Fixed  XWIKI-1262 : Make current cell visible when selected in a table
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki/trunk/web@3494 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/standard/src/main/webapp/tiny_mce/themes/wikieditor/css/editor_content.css
+++ b/xwiki-platform-web/standard/src/main/webapp/tiny_mce/themes/wikieditor/css/editor_content.css
@@ -14,7 +14,6 @@ body {
 
 td {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 10px;
 }
 
 pre {
